test_script/iptables.up.rules
# Generated by iptables-save v1.4.21 on Wed Jul 26 16:55:46 2017
*nat
:PREROUTING ACCEPT [94:14312]
:INPUT ACCEPT [94:14312]
:OUTPUT ACCEPT [5:429]
:POSTROUTING ACCEPT [8:657]
:shadowsocks - [0:0]
-A OUTPUT ! -p icmp -j shadowsocks
-A shadowsocks -d 0.0.0.0/8 -j RETURN
-A shadowsocks -d 127.0.0.0/8 -j RETURN
-A shadowsocks -d 10.0.0.0/8 -j RETURN
-A shadowsocks -d 169.254.0.0/16 -j RETURN
-A shadowsocks -d 172.16.0.0/12 -j RETURN
-A shadowsocks -d 192.168.0.0/16 -j RETURN
-A shadowsocks -d 224.0.0.0/4 -j RETURN
-A shadowsocks -d 240.0.0.0/4 -j RETURN
-A shadowsocks -d 35.185.198.136/32 -j RETURN
-A shadowsocks -m set --match-set cidr_cn dst -j RETURN
-A shadowsocks ! -p icmp -j REDIRECT --to-ports 1080
COMMIT
# Completed on Wed Jul 26 16:55:46 2017
